--- a/style.css
+++ b/style.css
@@ -59,7 +59,6 @@ li:not(:last-child) {
 }
 
 h1 {
-      color: black;
       margin: 0;
       padding: 0;
       font-weight: 600;
@@ -79,6 +78,10 @@ h1 {
 h6 {
       margin-top: 16px;
       font-size: 14px;
+}
+footer{
+      
+    padding: 80px 0 50px;
 }
 
 .div-header {
