--- a/style.css
+++ b/style.css
@@ -22,7 +22,6 @@
       box-sizing: border-box;
 }
 
-
 body {
       font-family: CircularAir-Book;
       background-color: #1b263a;
@@ -36,26 +35,6 @@ header {
       background-color: black;
       line-height: 1.5;
       min-height: 54px;
-}
-
-.nav-link {
-      color: #fff;
-      font-size: 16px;
-      font-weight: 600;
-}
-
-.nav-link:hover {
-      color: #1ed760;
-}
-
-ul {
-      margin-right: 0px;
-}
-
-li:not(:last-child) {
-      color: #fff;
-      margin: 10px;
-      font-family: Spotify-font;
 }
 
 h1 {
@@ -79,10 +58,22 @@ h6 {
       margin-top: 16px;
       font-size: 14px;
 }
-footer{
-      
-    padding: 80px 0 50px;
+
+footer h4 {
+
+      color: #919496;
+      font-size: 12px;
+      font-weight: 900;
+      line-height: 1.4;
+      letter-spacing: .08em;
+      text-transform: uppercase;
 }
+
+footer {
+      padding: 80px 0 0px;
+      background-color: black;
+}
+
 
 .div-header {
       margin-top: 20px;
@@ -114,6 +105,32 @@ footer{
       margin-bottom: auto;
 }
 
+.nav-link-header, .nav-link {
+      color: #fff;
+      font-size: 16px;
+}
+
+.nav-link-header:hover, .nav-link:hover{
+      color: #1ed760;
+}
+
+.nav-link-header{
+      font-family: Spotify-font;
+      font-weight: 600;
+}
+
+.nav-link{
+      font-family: CircularAir-Book;
+}
+
+.nav-link-header :not(:last-child) {
+      margin: 10px;
+}
+
+.bandeira{
+      height: 12px;
+      width: 20;
+}
 
 .padding-right-0 {
       padding-right: 0px;
@@ -203,4 +220,42 @@ footer{
       background-color: white;
       border-color: white;
       color: #000;
+}
+
+.nav-item-social {
+      flex: 1 1 auto;
+      text-align: center;
+      flex-basis: 0;
+      flex-grow: 1;
+      text-align: center;
+      display: inline;
+      margin-left: 10px;
+}
+.width-full{
+      width: 100%;
+}
+.text-end{
+      text-align: end;
+      padding-right: 15px;
+}
+.texto-simples{
+      font-family: CircularAir-Book;
+      font-size: 12px;
+      font-weight: normal;
+      color: #919496;
+}
+
+@media (min-width:576px) {
+}
+
+@media (min-width:768px) {
+}
+
+@media (min-width:992px) {
+}
+
+@media (min-width:1200px) {
+}
+
+@media (min-width:1400px) {
 }
