--- a/style.css
+++ b/style.css
@@ -265,6 +265,44 @@ footer {
 .drop-shadow {
 	filter: drop-shadow(0.0rem 0.0rem 1rem rgb(70, 70, 78));
 }
+.menu-lateral{
+      background-color: #222326;
+}
+.perfil-avatar{
+      margin-top: 15px;
+      margin-bottom: 15px;
+}
+.list-group{
+    font-size: 16px;
+    list-style: none;
+    position: relative;
+    border-bottom-color: rgba(255, 255, 255, 0.05);
+    border-top-color: rgba(0, 0, 0, 0.2);
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    padding: 0;
+    border: springgreen solid 1px;
+}
+.list-group-item{
+      background-color: transparent;
+      display: block;
+      border-bottom: 1px solid rgba(0, 0, 0, 0.005);
+      border-top: 1px solid rgba(0, 0, 0, 0.025);
+      border-bottom-color: rgba(0, 0, 0, 0.2);
+      border-top-color: rgba(255, 255, 255, 0.05);
+      margin: 0px;
+      padding: 15px 15px 15px 75px;
+      position: relative;
+      font-size: 16px;
+      line-height: 24px;
+      color: #919496;
+      padding-left: 15px;
+      text-align: -webkit-match-parent;
+}
+.list-group-item:hover{
+      color: #F8F8F8;
+      border-left: 4px solid #1ed760;
+}
 
 @media (min-width:576px) {
 }
