--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@
 body {
       font-family: CircularAir-Book;
       background-color: #1b263a;
+      background-image: linear-gradient(to bottom, #1f2a39, #070c19);
 
       font-size: 16px;
       line-height: 1.5;
@@ -52,6 +53,12 @@ h1 {
       letter-spacing: -0.04em;
       text-align: center;
       font-family: Spotify-font;
+}
+
+h3{
+      font-family: Spotify-font;
+      font-size: 24px;
+      margin-bottom: 16px;
 }
 
 h6 {
@@ -131,12 +138,43 @@ footer {
       height: 12px;
       width: 20;
 }
+
 .padding-right-0 {
       padding-right: 0px;
+}
+
+.padding-left-32 {
+      padding-left: 32px;
+}
+.margin-16{
+      margin: 16px;
+}
+.padding-16{
+      padding: 16px;
+}
+
+.padding-top-10{
+      padding-top: 30px;
+}
+
+.text-aligment-center{
+      text-align: center;
+}
+
+.text-aligment-left{
+      text-align: left;
+}
+
+.text-aligment-right{
+      text-align: right;
+}
+.texto-uppercase{
+      text-transform: uppercase;
 }
 .font-weight-normal {
       font-weight: normal;
 }
+
 .letras-miudas {
       font-size: 11px;
       line-height: 12px;
@@ -145,11 +183,13 @@ footer {
       color: black;
       text-decoration: none;
 }
+
 .letras-miudas a {
       color: #000;
       -webkit-text-decoration: underline;
       text-decoration: underline;
 }
+
 .banner {
       display: -webkit-box;
       display: -webkit-flex;
@@ -165,6 +205,7 @@ footer {
       background-color: #ff4632;
       padding-top: 30px;
 }
+
 .texto-promocional {
       display: -webkit-box;
       display: -webkit-flex;
@@ -183,6 +224,7 @@ footer {
       justify-content: space-around;
 
 }
+
 .imagem-promocional {
       display: -webkit-box;
       display: -webkit-flex;
@@ -199,6 +241,7 @@ footer {
       background-size: contain;
       background-origin: content-box;
 }
+
 .div-icone{
       display: -webkit-box;
       display: -webkit-flex;
@@ -210,22 +253,35 @@ footer {
       background-origin: content-box;
       line-height: 35px;
 }
+
 .icone{
       display: block;
       margin-left: auto;
       margin-right: auto;
 }
-.btn-dark {
-      background-color: black;
+
+.btn-dark,.btn-outline-dark {
       padding: 8px 32px 8px 32px;
       border-radius: 32px;
       font-size: 14px;
       margin-top: 35px;
       margin-bottom: 16px;
 }
+.btn-dark{
+      color: white;
+}
+.btn-outline-dark{
+      border-color: #757575;
+      color: #757575;
+}
 .btn-dark:hover {
       background-color: white;
       border-color: white;
+      color: #000;
+}
+.btn-outline-dark:hover {
+      background-color: white;
+      border-color: #000;
       color: #000;
 }
 .nav-item-social {
@@ -240,29 +296,39 @@ footer {
       width: 40px;
       background-image: url('assets/img/fundo.png') no-repeat;
 }
+
 .width-full{
       width: 100%;
 }
+
 .text-end{
       text-align: end;
       padding-right: 15px;
 }
+
 .texto-simples{
       font-family: CircularAir-Book;
       font-size: 12px;
       font-weight: normal;
       color: #919496;
 }
+.color-9e{
+      color: #9e9e9e;
+}
+
 .drop-shadow {
 	filter: drop-shadow(0.0rem 0.0rem 1rem rgb(70, 70, 78));
 }
+
 .menu-lateral{
       background-color: #222326;
 }
+
 .perfil-avatar{
       margin-top: 15px;
       margin-bottom: 15px;
 }
+
 .list-group{
     font-size: 16px;
     list-style: none;
@@ -274,6 +340,7 @@ footer {
     padding: 0;
     border: springgreen solid 1px;
 }
+
 .list-group-item{
       background-color: transparent;
       display: block;
@@ -290,9 +357,26 @@ footer {
       padding-left: 15px;
       text-align: -webkit-match-parent;
 }
+
 .list-group-item:hover{
       color: #F8F8F8;
       border-left: 4px solid #1ed760;
+}
+.aviso{
+      background: #f8f8f8;
+      border: 1px solid #d9dadc;
+      padding:16px;
+}
+.plano{
+      font-family: Spotify-font;
+      color: white;
+      font-size: 43px;
+      height: 230px;
+      background-image: linear-gradient(to bottom, #b22abd, #9822b9);
+      position: relative;
+}
+.plano span{
+      top: 50%;
 }
 
 @media (min-width:576px) {
