--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ footer {
 
 .nav-link-header{
       font-family: Spotify-font;
-      font-weight: 500;
+      font-weight: 600;
 }
 
 .nav-link{
@@ -145,6 +145,9 @@ footer {
 
 .padding-left-32 {
       padding-left: 32px;
+}
+.margin-left-6 {
+      margin-left: 6px;
 }
 .margin-16{
       margin: 16px;
@@ -301,7 +304,7 @@ footer {
       width: 100%;
 }
 
-.text-end{
+.texto-end{
       text-align: end;
       padding-right: 15px;
 }
@@ -321,12 +324,21 @@ footer {
 }
 
 .menu-lateral{
-      background-color: #222326;
+      background-color: #282828;
+      margin: 0px;
+      padding: 4px;
 }
 
 .perfil-avatar{
       margin-top: 15px;
-      margin-bottom: 15px;
+      margin-bottom: 36px;
+}
+.avatar{
+      color: #222326;
+}
+.icon-nav{
+      
+      margin-right: 10px;
 }
 
 .list-group{
@@ -337,7 +349,8 @@ footer {
     border-top-color: rgba(0, 0, 0, 0.2);
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
-    padding: 0;
+    padding: 0px;
+    margin: 0px;
 }
 
 .list-group-item{
@@ -347,7 +360,6 @@ footer {
       border-top: 1px solid rgba(0, 0, 0, 0.025);
       border-bottom-color: rgba(0, 0, 0, 0.2);
       border-top-color: rgba(255, 255, 255, 0.05);
-      margin: 0px;
       padding: 15px 15px 15px 75px;
       position: relative;
       font-size: 16px;
@@ -359,7 +371,8 @@ footer {
 
 .list-group-item:hover{
       color: #F8F8F8;
-      border-left: 4px solid #1ed760;
+      border-left: 5px solid #1ed760;
+      margin-left: -5px;
 }
 .aviso{
       background: #f8f8f8;
@@ -373,7 +386,7 @@ footer {
       height: 230px;
       background-image: linear-gradient(to bottom, #b22abd, #9822b9);
 }
-.heght-30c{
+.heght-37c{
       height: 37%;
 }
 .pre-rodape{
